--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: 5150Z
+name: 5150things
 
 # Short bio or description (displayed in the header)
 description: Test for lib
